fixed word wrap for announcement and projects

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@
   .card > p {
     text-align: start;
     padding-top: 5px;
-    word-break: break-all;
+    word-wrap: break-word;
   }
 
   .project-icons > ul > li {
@@ -238,7 +238,7 @@
 
   .title2 {
     font-size: 15px;
-    font-weight: 600;
+    font-weight: 500;
     padding-bottom: 5px;
     text-align: start;
     padding-left: 10px;
@@ -247,6 +247,9 @@
   .announcement > p {
     text-align: start;
     padding-left: 10px;
+    word-wrap: break-word;
+    font-size: 12px;
+    font-weight: 200;
   }
 
   .trending-area {
